// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hello-world.html 1`] = `
<!DOCTYPE html>
<html lang="en">
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
</head>
<body>
    <!-- A comment -->
    <h1>Hello World</h1>
</body>
</html>

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

<!DOCTYPE html>


<html lang="en">


<head>
  <meta charset="UTF-8">

  <meta name="viewport"
    content="width=device-width, initial-scale=1.0">

  <meta http-equiv="X-UA-Compatible"
    content="ie=edge">

  <title>Document</title>
</head>

<body>
  <!-- A comment -->
  <h1>Hello World</h1>
</body>
</html>
`;

exports[`html-fragment.html 1`] = `
<a href="#">Link</a>

<textarea>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

<a href="#">Link</a>
<textarea />

`;

exports[`more-html.html 1`] = `
<html>
<body>
    <a href="#">Anchor</a>
    <div hidden class="foo" id=bar></div>
</body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


<html>

<head />


<body>
  <a href="#">Anchor</a>
  <div hidden
    class="foo"
    id="bar" />

</body>
</html>
`;

exports[`void-elements.html 1`] = `
<html>
<head>
  <meta charset="UTF-8">
  <link rel="stylesheet" href="code-guide.css">
</head>
<body></body>
</html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


<html>


<head>
  <meta charset="UTF-8">

  <link rel="stylesheet"
    href="code-guide.css">

</head>

<body>
</body>
</html>
`;
